--- a/templates/device.html.twig
+++ b/templates/device.html.twig
@@ -173,9 +173,9 @@
                                     </td>
                                     #}
                                     <td>
-                                        <input class="btn bg-orange btn-outline-orange connect_command" id="c_sn_{{device.sn}}" name='{{device.sn}}' type="button" value="Connect" data-bs-toggle="modal" data-bs-target="#testAcces" hidden>
+                                        {#<input class="btn bg-orange btn-outline-orange connect_command" id="c_sn_{{device.sn}}" name='{{device.sn}}' type="button" value="Connect" data-bs-toggle="modal" data-bs-target="#testAcces" hidden>#}
                                         
-                                        {#<input class="btn connect_command" id="c_sn_{{device.sn}}" name='{{device.sn}}' type="button" value="Connect" {% if device.isActive == true %}{% else %}disabled{% endif %}>#}
+                                        <input class="btn connect_command" id="c_sn_{{device.sn}}" name='{{device.sn}}' type="button" value="Connect" {% if device.isActive == true %}{% else %}hidden{% endif %}>
                                     </td>
                                 </tr>
                             {% endfor %}
