--- a/templates/device.html.twig
+++ b/templates/device.html.twig
@@ -21,7 +21,7 @@
                 <div id="listDeviceTable" class="responsive-table mt-4 mb-4 w-100 overflow-scroll">
                     <table class="table striped w-100" id="deviceTable">
                         <thead>
-                            <tr>
+                            <tr class="align-middle">
                                 <th></th>
                                 <!--<th class="text-center">Serial Number <i class="fa-solid fa-arrow-up-a-z" id="sn" onclick=sortTable(0)></i></th>-->
                                 <th class="text-center">Serial Number<i class="fa-solid fa-arrow-up-a-z" id="snSort" onclick=sortTable(0)></i></th>
@@ -101,8 +101,6 @@
                                         <div class="form-field">
                                         <label class="form-check">
                                             <input type="checkbox" id="checkbox_{{device.id}}" data-id="{{device.id}}" name="checkbox_item" class="form-check-input" {{ (device.selected)? 'checked': ''}}/>
-                                            
-                                            <span></span>
                                         </label>
                                         </div>
                                         
@@ -131,7 +129,7 @@
                                     </td>
                                     #}
                                     <!--<td><a download href="{{ asset('uploads/devices/logs' ~ device.logFile) }}">Download Log</a></td>-->
-                                    <td><a download href="{{ asset('Ressource/logs/' ~ device.deviceFamily ~ '/' ~ device.logFile) }}"><i class="fa-solid fa-download"></i></a></td>
+                                    <td class="text-center"><a download href="{{ asset('Ressource/logs/' ~ device.deviceFamily ~ '/' ~ device.logFile) }}"><i class="fa-solid fa-download"></i></a></td>
                                     <!-- forced -->
                                     <td class="text-center">
                                         {% if device.forced %}<i class="fa-solid fa-rotate"></i>{% else %}{% endif %}
@@ -172,10 +170,10 @@
                                         data-title="{{device.sn}}"><i class="fa-solid fa-pen"></i></a>
                                     </td>
                                     #}
-                                    <td>
-                                        {#<input class="btn bg-orange btn-outline-orange connect_command" id="c_sn_{{device.sn}}" name='{{device.sn}}' type="button" value="Connect" data-bs-toggle="modal" data-bs-target="#testAcces" hidden>#}
+                                    <td class="text-center">
+                                        <input class="btn bg-orange btn-outline-orange connect_command" id="c_sn_{{device.sn}}" name='{{device.sn}}' type="button" value="Connect" data-bs-toggle="modal" data-bs-target="#testAcces" {% if device.deviceFamily != "BIOBACK" %}hidden{% else %}{% endif %}>
                                         
-                                        <input class="btn connect_command" id="c_sn_{{device.sn}}" name='{{device.sn}}' type="button" value="Connect" {% if device.isActive == true %}{% else %}hidden{% endif %}>
+                                        {#<input class="btn connect_command" id="c_sn_{{device.sn}}" name='{{device.sn}}' type="button" value="Connect" {% if device.isActive == true %}{% else %}{% endif %}>#}
                                     </td>
                                 </tr>
                             {% endfor %}
@@ -624,24 +622,6 @@
                         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
                         <button type="button" class="btn btn-primary">Save changes</button>
                         -->
-                    </div>
-                    </div>
-                </div>
-            </div>
-
-            <div class="modal fade" id="test" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-                <div class="modal-dialog">
-                    <div class="modal-content">
-                    <div class="modal-header">
-                        <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
-                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                    </div>
-                    <div class="modal-body">
-                        ...
-                    </div>
-                    <div class="modal-footer">
-                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                        <button type="button" class="btn btn-primary">Save changes</button>
                     </div>
                     </div>
                 </div>
