--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -134,4 +134,20 @@ header, .footer {
 
 button.accordionButton {
   color: white !important;
+}
+
+#versionForm:first-child {
+  width: 50%;
+  justify-content: right;
+}
+
+td {
+  vertical-align: middle;
+}
+
+.test_zone_0 {
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+  vertical-align: middle;
 }/*# sourceMappingURL=styles.css.map */
