--- a/templates/device.html.twig
+++ b/templates/device.html.twig
@@ -18,7 +18,7 @@
                 {{ form(searchform) }}
                 </div>
 
-                <div id="listDeviceTable" class="table-responsive mt-4 mb-4 w-100">
+                <div id="listDeviceTable" class="table-responsive mt-4 mb-4 w-100 overflow-auto">
                     <table class="table table-striped table-hover w-100" id="deviceTable">
                         <thead class="w-100 align-middle">
                             <tr class="h-100 w-100 align-middle" id="deviceTableTitle">
