--- a/templates/device.html.twig
+++ b/templates/device.html.twig
@@ -18,7 +18,7 @@
                 {{ form(searchform) }}
                 </div>
 
-                <div id="listDeviceTable" class="table-responsive mt-4 mb-4 w-100 overflow-auto">
+                <div id="listDeviceTable" class="table-responsive mt-4 mb-4 w-100">
                     <table class="table table-striped table-hover w-100" id="deviceTable">
                         <thead class="w-100 align-middle">
                             <tr class="h-100 w-100 align-middle" id="deviceTableTitle">
@@ -63,10 +63,13 @@
                                 <th></th>
                                 <th></th>
                                 <th id='test_zone_0'>
-                                    <div class="input-group d-flex no-wrap">
+                                    <!--<div class="input-group d-flex no-wrap">-->
+                                            {#
                                             {{form_widget(form.versionInput)}}
                                             {{form_widget(form.Save)}}
-                                    </div>
+                                            #}
+                                            {{form(form)}}
+                                    <!--</div>-->
                                 </th>
                                 <th></th>
                                 <th></th>
@@ -76,7 +79,7 @@
                             </tr>
                         </thead>
                         
-                        <tbody class="w-100">
+                        <tbody class="w-100 overflow-scroll">
                             {% for device in devices %}
                                 <tr scope="row" class="w-100">
                                     <td class="text-center">
