--- a/templates/device/info_modals.html.twig
+++ b/templates/device/info_modals.html.twig
@@ -172,8 +172,8 @@
 
                 <div class="modal-footer">
                     <div>
-                        
-                        <a href="{{path('forced', {'id': device.id})}}" class="btn red shadow-1 rounded-1 small">Validate</a>
+                        <a href="" class="btn red shadow-1 rounded-1 small">Validate</a>
+                        {#<a href="{{path('forced', {'id': device.id}, {'id': device.id})}}" class="btn red shadow-1 rounded-1 small">Validate</a>#}
                     </div>
                     
                 </div>
