--- a/templates/device.html.twig
+++ b/templates/device.html.twig
@@ -19,12 +19,12 @@
                 </div>
 
                 <div id="listDeviceTable" class="table-responsive mt-4 mb-4 w-100">
-                    <table class="table table-striped table-hover w-100" id="deviceTable">
+                    <table class="table table-striped table-hover w-100" id="deviceTable" data-toggle="table" data-pagination="true" data-sort-name="sn" data-search="true">
                         <thead class="w-100 align-middle">
                             <tr class="h-100 w-100 align-middle" id="deviceTableTitle">
                                 <th scope="col"></th>
                                 <!--<th class="text-center">Serial Number <i class="fa-solid fa-arrow-up-a-z" id="sn" onclick=sortTable(0)></i></th>-->
-                                <th scope="col" class="h-100">
+                                <th scope="col" class="h-100" data-sortable="true" data-field="sn">
                                     <div class="h-100 d-flex justify-content-between input-group no-wrap text-center align-items-center">
                                         <span class="h-100 d-flex align-items-center">Serial Number</span>
                                         <span class="btn btn-light text-dark h-100 p-1" type="button"><i class="h-100 fa-solid fa-arrow-up-a-z d-flex align-items-center" id="snSort" onclick=sortTable(1)></i></span>
@@ -32,7 +32,7 @@
                                 
                                 </th>
                                 <th scope="col" class="text-center">Device Family</th>
-                                <th scope="col" class="text-center">Version</th>
+                                <th scope="col" class="text-center" data-sortable="true" data-field="version">Version</th>
                                 <th scope="col" class="text-center">Upload Version</th>
                                 <!--
                                 TODO Progress bar
@@ -108,7 +108,7 @@
                                     </td>
                                     <!--info-->
                                     <td class="text-center">
-                                        <a id="info_device" href="#" class="info_device btn rounded-1 press modal-trigger" 
+                                        <a id="info_device" href="#" class="info_device btn rounded-1 press modal-trigger bg-orange btn-outline-orange" 
                                         data-bs-target="#modal_info_{{device.id}}"
                                         data-id="{{device.id}}"
                                         data-title="{{device.sn}}"
@@ -147,8 +147,10 @@
                     </table>
                     
                 </div>
+
             </div>
-            
+            <!-- ===== /DEVICE TABLE ===== -->
+
             <!-- ===== INFO MODALS ===== -->
             {% include 'device/info_modals.html.twig' %}
 
@@ -184,31 +186,24 @@
     <script>
 
     // ######### Sort Table by alphabetical order ######### //
+
+    
     function sortTable(n) {
         var table, rows, switching, i, x, y, shouldSwitch, dir, switchcount = 0;
         table = document.getElementById("deviceTable");
         switching = true;
         // Set the sorting direction to ascending:
         dir = "asc";
-        /* Make a loop that will continue until
-        no switching has been done: */
         while (switching) {
         // Start by saying: no switching is done:
         switching = false;
         rows = table.rows;
-        /* Loop through all table rows (except the
-        first, which contains table headers): */
         for (i = 2; i < (rows.length -1); i++) {
             // Start by saying there should be no switching:
             shouldSwitch = false;
-            /* Get the two elements you want to compare,
-            one from current row and one from the next: */
-            
             x = rows[i].getElementsByTagName("TD")[n];
             y = rows[i + 1].getElementsByTagName("TD")[n];
             //console.log(rows[14].getElementsByTagName("TD")[n].innerHTML)
-            /* Check if the two rows should switch place,
-            based on the direction, asc or desc: */
             if (dir == "asc") {
             if (x.innerHTML.toLowerCase() > y.innerHTML.toLowerCase()) {
                 // If so, mark as a switch and break the loop:
@@ -225,15 +220,11 @@
             }
         }
         if (shouldSwitch) {
-            /* If a switch has been marked, make the switch
-            and mark that a switch has been done: */
             rows[i].parentNode.insertBefore(rows[i + 1], rows[i]);
             switching = true;
             // Each time a switch is done, increase this count by 1:
             switchcount ++;
         } else {
-            /* If no switching has been done AND the direction is "asc",
-            set the direction to "desc" and run the while loop again. */
             if (switchcount == 0 && dir == "asc") {
             dir = "desc";
             switching = true;
@@ -241,45 +232,7 @@
         }
         }
     }
-        /*
-        let versionInput = document.getElementsByName('versionInput');
-        //const input = document.querySelector('input');
-        const log = document.getElementById('log');
-        for(let button of versionInput){
-            button.addEventListener('change', function (){
-                log.textContent = e.target.value;
-                $id = button.getAttribute("data-id");
-                let xmlhttp = new XMLHttpRequest;
-                console.log($id);
-                xmlhttp.open("GET", `/admin/device/updated/${$id}`)
-                xmlhttp.send()
-            });
-        }
-        */
 
-        /*
-        function checkForm(value) {
-            if (test_zone.innerHTML != "blublublu") {
-                test_zone.innerHTML = value
-            }
-        }
-        */
-
-        /*
-        log.textContent = e.target.value;
-        $id = button.getAttribute("data-id");
-        let xmlhttp = new XMLHttpRequest;
-        console.log($id);
-        xmlhttp.open("GET", `/admin/device/updated/${$id}`)
-        xmlhttp.send()
-        */
-
-        /*            
-        input.addEventListener('change', updateValue);
-        function updateValue(e) {
-        log.textContent = e.target.value;
-        }
-        */
 
         /*
         let editButton = document.querySelectorAll(".modal-trigger")
