--- a/templates/device.html.twig
+++ b/templates/device.html.twig
@@ -15,7 +15,26 @@
                 {% endfor %}
                 
                 <div id="listDeviceSearch" class="align-items-center mt-4 mb-4" style="width: 50%;">
+                
                 {{ form(searchform) }}
+
+                <!-- Button to add device table -->
+                <button id="floatingBtn" class="btn bg-orange btn-outline-orange" 
+                style="border: none; border-radius: 50%; height: 4em; width: 4em; box-shadow: 2px 2px 3px #999;" 
+                type="button"
+                data-bs-target="#modal_upload"
+                data-id="{{device.id}}"
+                data-title="{{device.sn}}"
+                data-bs-toggle="modal">
+                    <i class="fa-solid fa-plus"></i>
+                </button>
+                <!-- ===== UPLOAD MODALS ===== -->
+                {% include 'device/upload_modals.html.twig' %}
+                
+                {#
+                {{form_widget(searchform.forced)}}
+                {{form_widget(searchform.Search)}}
+                #}
                 </div>
 
                 <div id="listDeviceTable" class="table-responsive mt-4 mb-4 w-100">
