--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -30,6 +30,6 @@
         {% block javascripts %}
         <!--<script src="https://cdn.jsdelivr.net/npm/axentix@1.3.3/dist/js/axentix.min.js"></script>-->
         {% endblock %}
-        <script src="{{ asset('js/scripts.js')}}"></script>
+        <!--<script src="{{ asset('js/scripts.js')}}"></script>-->
     </body>
 </html>
