--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -15,6 +15,10 @@
         <link rel="stylesheet" href="{{ asset('css/styles.css') }}">
         <script type="text/javascript" src="{{ asset('js/jquery-3.3.1.min.js')}}"></script>
         <script src="https://kit.fontawesome.com/06466c4cae.js" crossorigin="anonymous"></script>
+        
+        <script type="text/javascript" src="{{ asset('js/winback.js')}}" defer></script>
+        <script type="text/javascript" src="{{ asset('js/socket.js')}}" defer></script>
+        <script type="text/javascript" src="{{ asset('js/scripts.js')}}" defer></script>
     </head>
 
     <body class="layout">
@@ -26,10 +30,14 @@
         {% include 'includes/_footer.html.twig' %}
         
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous"></script>
-        <script src="https://unpkg.com/bootstrap-table@1.20.2/dist/bootstrap-table.min.js"></script>
+        <!--<script src="https://unpkg.com/bootstrap-table@1.20.2/dist/bootstrap-table.min.js"></script>-->
         {% block javascripts %}
         <!--<script src="https://cdn.jsdelivr.net/npm/axentix@1.3.3/dist/js/axentix.min.js"></script>-->
         {% endblock %}
-        <!--<script src="{{ asset('js/scripts.js')}}"></script>-->
+        <!--
+        <script type="text/javascript" src="{{ asset('js/winback.js')}}"></script>
+        <script type="text/javascript" src="{{ asset('js/socket.js')}}"></script>
+        <script type="text/javascript" src="{{ asset('js/scripts.js')}}"></script>
+        -->
     </body>
 </html>
